<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- Title Message -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/welcome_to"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_extrabold"
            android:text="@string/score_keeper"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="25sp" />

        <TextView
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/app_guide"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <!-- Teams columns data -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <!-- TEAM 1 data -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/team_1_image"
                    android:src="@drawable/alien" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/team_1"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_score_team1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_extrabold"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/teal_700"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/points"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <!-- Add 1 Button -->
                <Button
                    android:id="@+id/btn_add_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addOneTeamOne"
                    android:text="@string/_1"
                    android:textColor="@color/black" />

                <!-- Add 5 Button -->
                <Button
                    android:id="@+id/btn_add_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addFiveTeamOne"
                    android:text="@string/_5"
                    android:textColor="@color/black" />

                <!-- Add 10 Button -->
                <Button
                    android:id="@+id/btn_add_ten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addTenTeamOne"
                    android:text="@string/_10"
                    android:textColor="@color/black" />

                <!-- Clear Team 1 Button -->
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="clearScoreTeamOne"
                    android:text="@string/clear"
                    android:textColor="@color/black" />
            </LinearLayout>


            <!-- TEAM 2 data -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/team_1_image"
                    android:src="@drawable/astronaut" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/team_2"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_score_team2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_extrabold"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/teal_700"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/points"
                    android:layout_marginBottom="16dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <!-- Add 1 Button -->
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addOneTeamTwo"
                    android:text="@string/_1"
                    android:textColor="@color/black" />

                <!-- Add 5 Button -->
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addFiveTeamTwo"
                    android:text="@string/_5"
                    android:textColor="@color/black" />

                <!-- Add 10 Button -->
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addTenTeamTwo"
                    android:text="@string/_10"
                    android:textColor="@color/black" />

                <!-- Clear Team 1 Button -->
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="clearScoreTeamTwo"
                    android:text="@string/clear"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <!-- Reset Button -->
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="resetTeams"
            android:text="@string/reset_scores"
            android:textColor="@color/black" />


    </LinearLayout>
</ScrollView>